assets/css/styles.css
/*-------- Churchil House 2020 ---------*/

@import url(reset.css)
/*    http://meyerweb.com/eric/tools/css/reset/ */

@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;600&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');


hmtl {
    font-size: 20px;
}

body {
    background-color: #ffffff;
    color: #4D4D4C;

    /*    make sure you set family and size on body*/
    font-family: 'Lato', sans-serif;
    font-size: 20px;
}


/*-------- Typographyic Styles ---------*/

h2,
h3,
h4,
h5,
h6 {

    margin-bottom: 20px;
    margin-top: 40px;
}

h1 {
    font-family: 'EB Garamond', serif;
    display: inline-block;
    font-size: 1.3em;
    color: #4D4D4C;
    text-transform: uppercase;
    letter-spacing: 1px;
    margin: 0 2rem 0 2rem;
}

h2 {
    font-family: 'EB Garamond', serif;
    font-size: 4em;
    color: #B08D0A;
    border-bottom: 4px solid #B08D0A;
    padding-bottom: 1rem;
    letter-spacing: 1px;
}

h1,
h2 {
    font-weight: 600;
}

h3 {
    font-family: 'Lato', sans-serif;
    font-size: 1.4em;
    color: #4D4D4C;
    font-weight: 700;
    padding: 0px 0 10 0;
    margin-top: 5rem;

}

h4 {
    font-family: 'Lato', sans-serif;
    font-size: 1em;
    color: #4D4D4C;
    font-weight: 700;
    padding: 0px 0 10 0;
    margin-top: 5rem;
    line-height: 1.5em;
}

li {
    list-style-type: disc;
    margin-left: 1rem;
    line-height: 1.7em;
    margin-top: 20px;
}

p {
    font-family: 'Lato', sans-serif;
    font-size: 1em;
    line-height: 1.5em;
    margin: 1.5rem 0 0 0;

}


q {
    quotes: "“""”";
}

q::before {
    content: open-quote;
}

q::after {
    content: close-quote;
}



/*------- Anchor Styles ---------*/

a {
    color: #9F9D9C;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
    color: #4D4D4C;

}

a:visited {
    /*    color: #4D4D4C;*/
}

a:active {
    color: #B08D0A;
}



/*--------- Main containers ----------*/

.wrapper {
    width: 840px;
    margin: 0 auto;

}


header {
    padding: 2rem;
}

h1,
nav {
    padding: 0.25rem 0 0.25rem 0;
}

nav {
    float: right;
    color: #9F9D9C;

}

nav ul {}

nav ul li {
    font-family: 'Lato', sans-serif;
    display: inline;
    font-size: 1em;
}

nav ul li a {
    color: #9F9D9C;
    text-decoration: none;
    padding: 0.5rem 0;
}

nav ul li a:hover,
nav ul li a.currentpage {
    text-decoration: none;
    color: #4D4D4C;
}


nav ul li a:active {
    color: #B08D0A;
}


.hero {
    min-height: 450px;
    min-width: 100%;
    background-image: url(../images/extra1-churchill-house-by-robin-boyd-photo-copyright-darren-bradley-home.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: top;
    background-color: #4D4D4C;
    padding: 5rem 0 0 0;
}



main {
    padding: 1rem 0;
    overflow: inherit;
}


footer {
    color: #ffffff;
    background-color: #4D4D4C;
    padding-bottom: 2rem;
    clear: both;
    position: relative;
    height: 8rem;
    padding-top: 1rem;
    margin-top: 2rem;
}


footer p {
    font-size: 80%;
}



/*----------Clsses Styles----------*/

.text-container {
    width: 100%;
    margin: 0 2rem 4rem 2rem;
}


.column-left {
    float: left;
    box-sizing: border-box;
    overflow-x: visible;
    z-index: 999;
    margin-bottom: 4rem;
}


.column-right {
    float: right;
    box-sizing: border-box;
    overflow-x: visible;
    z-index: 999;
    margin-bottom: 4rem;
}




.leftimg {
    height: auto;
    width: 22rem;
    border: 2px solid #9F9D9C;
    padding: 1.5rem;
    background-color: white;
}

.centerimg {
    width: 50rem;
    border: 2px solid #9F9D9C;
    padding: 1.5rem;
    margin-top: 2rem;
    background-color: white;
}

